[gd_scene load_steps=6 format=3 uid="uid://ch0pcrj04sh1x"]

[ext_resource type="Script" path="res://main/menubar_project.gd" id="1_djgb1"]
[ext_resource type="Script" path="res://main/main.gd" id="1_dmab8"]
[ext_resource type="Theme" uid="uid://cl13gt6fcleb5" path="res://themes/dark.tres" id="3_pcbed"]
[ext_resource type="Script" path="res://main/file_not_saved.gd" id="4_18tjm"]
[ext_resource type="Script" path="res://main/project_not_saved.gd" id="4_fy40g"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmab8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Contents" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="FilesInEdit" type="TabContainer" parent="Contents"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("3_pcbed")

[node name="FilelistScroll" type="ScrollContainer" parent="Contents"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.3
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Filelist" type="VBoxContainer" parent="Contents/FilelistScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Popups" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OpenFileOrFolder" type="FileDialog" parent="Popups"]
title = "Open a Directory"
size = Vector2i(314, 175)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="FileNotSaved" type="AcceptDialog" parent="Popups"]
title = "File not saved"
initial_position = 1
size = Vector2i(256, 100)
ok_button_text = "Save"
script = ExtResource("4_18tjm")

[node name="ProjectNotSaved" type="AcceptDialog" parent="Popups"]
auto_translate_mode = 1
title = "Project not saved"
initial_position = 1
size = Vector2i(256, 100)
ok_button_text = "Save"
script = ExtResource("4_fy40g")

[node name="Menu" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_bottom = 31.0

[node name="Project" type="MenuBar" parent="Menu"]
layout_mode = 2
script = ExtResource("1_djgb1")

[node name="Project" type="PopupMenu" parent="Menu/Project"]
size = Vector2i(100, 108)
item_count = 3
item_0/text = "Open"
item_0/id = 1
item_1/text = "Close"
item_1/id = 2
item_2/text = "Exit"
item_2/id = 4

[node name="Misc" type="MenuBar" parent="Menu"]
visible = false
layout_mode = 2

[node name="Misc" type="PopupMenu" parent="Menu/Misc"]

[connection signal="tab_button_pressed" from="Contents/FilesInEdit" to="." method="fileClosed"]
[connection signal="dir_selected" from="Popups/OpenFileOrFolder" to="." method="openProjectFromFolder"]
[connection signal="file_selected" from="Popups/OpenFileOrFolder" to="." method="openProjectFromFile"]
[connection signal="canceled" from="Popups/FileNotSaved" to="Popups/FileNotSaved" method="cancel"]
[connection signal="close_requested" from="Popups/FileNotSaved" to="Popups/FileNotSaved" method="close"]
[connection signal="confirmed" from="Popups/FileNotSaved" to="Popups/FileNotSaved" method="confirm"]
[connection signal="custom_action" from="Popups/FileNotSaved" to="Popups/FileNotSaved" method="discard"]
[connection signal="canceled" from="Popups/ProjectNotSaved" to="Popups/ProjectNotSaved" method="cancel"]
[connection signal="close_requested" from="Popups/ProjectNotSaved" to="Popups/ProjectNotSaved" method="close"]
[connection signal="confirmed" from="Popups/ProjectNotSaved" to="Popups/ProjectNotSaved" method="confirm"]
[connection signal="custom_action" from="Popups/ProjectNotSaved" to="Popups/ProjectNotSaved" method="discard"]
[connection signal="id_pressed" from="Menu/Project/Project" to="Menu/Project" method="_on_project_index_pressed"]
